# Veclabs

./: Cargo.toml  README.md  THESIS.md  phase1.md
crates/solvec-core/: Cargo.toml  lib.rs
crates/solvec-core/src/: distance.rs  hnsw.rs  types.rs
crates/solvec-core/tests/: integration_test.rs
crates/solvec-wasm/: Cargo.toml
crates/solvec-wasm/src/: lib.rs
docs/: architecture.md
