[package]
name = "solvec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {workspace = true }
serde = {workspace = true }
rayon = "1.7"          # Parallel processing
ahash = "0.8"          # Fast hashing

[dev-dependencies]
criterion = {workspace = true }

[[bench]]
name = "hnsw_bench"
harness = false

[lib]
path = "lib.rs"